tests/should_fail/incomplete_function.nds
-- Truncated function declaration.
function foo(
